# ilograph-mcp-server

./: .bandit  .coverage  .dockerignore  .flake8  Dockerfile  LICENSE  README.md  REQUIREMENTS.md  env.example  ilograph-site-map.txt  main.py  pyproject.toml
.cursor/rules/: python-setup.mdc  python.mdc  uv.mdc
.github/: CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request_template.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker.yml  pypi.yml  release.yml
data/: iconlist.txt
docs/: ARCHITECTURE.md  CONTRIBUTING.md  TOOLS.md
src/: __init__.py  main.py
src/analysis/: __init__.py  base.py  factory.py  java_analyzer.py  javascript_analyzer.py  python_analyzer.py
src/diagram/: __init__.py  ilograph.py  perspectives.py  renderer.py
src/ilograph_mcp/: __init__.py  __main__.py  server.py
src/ilograph_mcp/core/: __init__.py  cache.py  fetcher.py
src/ilograph_mcp/data/: __init__.py  loader.py  validator.py
src/ilograph_mcp/resources/: __init__.py  examples.py
src/ilograph_mcp/static/examples/: aws-distributed-load-testing.ilograph  serverless-on-aws.ilograph  stack-overflow-architecture-2016.ilograph
src/ilograph_mcp/tools/: __init__.py  fetch_documentation_tool.py  register_example_tools.py  register_fetch_documentation_tools.py  register_fetch_icons_tool.py  register_fetch_spec_tool.py  register_validate_diagram_tool.py  validation.py
src/ilograph_mcp/utils/: __init__.py  http_client.py  markdown_converter.py
src/mcp/: __init__.py  server.py  tools.py
src/utils/: __init__.py  config.py  logging_config.py  validation.py
tests/: __init__.py  test_analysis.py  test_examples.py  test_fetch_documentation_tool.py  test_fetch_example_tool.py  test_fetch_icons_tool.py  test_fetch_spec_tool.py  test_validate_diagram_tool.py  test_validation.py
