[project]
name = "ilograph-mcp-server"
version = "0.1.0"
description = "FastMCP server providing AI agents with Ilograph diagram creation and validation capabilities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Ilograph MCP Server", email = "dev@example.com"}
]
keywords = ["mcp", "ilograph", "diagrams", "ai", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.7.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pydantic>=2.0.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "safety>=3.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "safety>=2.3.0",
    "bandit>=1.7.0",
    "types-PyYAML>=6.0.0",
    "types-beautifulsoup4>=4.12.0",
]

[project.scripts]
ilograph-mcp = "ilograph_mcp.server:main"

[project.urls]
Homepage = "https://github.com/your-org/ilograph-mcp-server"
Repository = "https://github.com/your-org/ilograph-mcp-server.git"
Documentation = "https://github.com/your-org/ilograph-mcp-server#readme"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ilograph_mcp.static.examples" = ["*.ilograph"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
